--- a/public/test.html
+++ b/public/test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My Public Page</title>
+    <title>test</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
@@ -31,7 +31,7 @@
         <div class="col-md-3">
           <ul class="nav flex-column">
             <li class="nav-item">
-              <a class="nav-link active" href="/createShow">CREATE SERIE</a>
+              <a class="nav-link active" href="#">CREATE SERIE</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">CREATE SHOW</a>
@@ -51,7 +51,7 @@
           </ul>
         </div>
         <div class="col-md-9">
-          <h1>Welcome to My App</h1>
+          <h1>Welcome to My Option 1</h1>
           <p>This is the main content area.</p>
         </div>
       </div>
