--- a/public/createSerie.html
+++ b/public/createSerie.html
@@ -8,40 +8,24 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"
     />
-    <style>
-      body {
-        margin: 0;
-        background-color: #fff;
-      }
-      .container {
-        background-color: #fff;
-        border-radius: 10px;
-        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-        padding: 20px;
-        width: 100%;
-        max-width: 1200px;
-        margin: 0 auto;
-        margin-top: 50px;
-      }
-    </style>
   </head>
   <body>
-    <div class="container">
+    <div class="box m-6">
       <div class="columns">
-        <div class="column is-one-fifth">
+        <div class="column is-2">
           <aside>
-            <figure class="image is-160x160 mb-2">
+            <figure class="image">
               <img
                 src="https://res.cloudinary.com/dpoefum0k/image/upload/v1680084810/podcast-api/LogoESDH2022_se2vuk.png"
                 alt="Logo"
                 class="menu-label"
               />
             </figure>
-            <ul class="menu-list">
+            <ul class="menu-list pt-5">
               <li><a href="/createSerie">CREATE SERIE</a></li>
               <li><a href="/createShow">CREATE SHOW</a></li>
-              <li><a href="#">DELETE SHOW</a></li>
-              <li><a href="#">DELETE SERIE</a></li>
+              <li><a href="/deleteShow">DELETE SHOW</a></li>
+              <li><a href="/deleteSerie">DELETE SERIE</a></li>
               <li><a href="#">EDIT SERIE</a></li>
               <li><a href="#">EDIT SHOW</a></li>
             </ul>
@@ -143,27 +127,36 @@
                   type="checkbox"
                   id="member1"
                   name="members[]"
-                  value="John"
+                  value="Luis Slimming"
                 />
-                <label for="member1">John</label>
+                <label for="member1">Luis Slimming</label>
               </div>
               <div>
                 <input
                   type="checkbox"
                   id="member2"
                   name="members[]"
-                  value="Jane"
+                  value="Marcelo Valverde"
                 />
-                <label for="member2">Jane</label>
+                <label for="member2">Marcelo Valverde</label>
               </div>
               <div>
                 <input
                   type="checkbox"
                   id="member3"
                   name="members[]"
-                  value="Bob"
+                  value="Hector Romero"
                 />
-                <label for="member3">Bob</label>
+                <label for="member3">Hector Romero</label>
+              </div>
+              <div>
+                <input
+                  type="checkbox"
+                  id="member3"
+                  name="members[]"
+                  value="Pao Molina"
+                />
+                <label for="member3">Pao Molina</label>
               </div>
             </div>
             <div class="field">
@@ -263,16 +256,19 @@
           .then((response) => {
             button.classList.remove('is-loading');
             if (response.status === 201) {
-              showAlert('success', 'Show created successfully!');
+              showAlert('success', 'Serie created successfully!');
             } else {
-              showAlert('danger', 'An error occurred while creating the show.');
+              showAlert(
+                'danger',
+                'An error occurred while creating the serie.'
+              );
             }
             console.log(response);
           })
           .catch((error) => {
             button.classList.remove('is-loading');
             console.error(error);
-            showAlert('danger', 'An error occurred while creating the show 2.');
+            showAlert('danger', 'An error occurred while creating the serie.');
           });
         createShowForm.reset();
       });
