--- a/public/createShow.html
+++ b/public/createShow.html
@@ -8,40 +8,24 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"
     />
-    <style>
-      body {
-        margin: 0;
-        background-color: #fff;
-      }
-      .container {
-        background-color: #fff;
-        border-radius: 10px;
-        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-        padding: 20px;
-        width: 100%;
-        max-width: 1200px;
-        margin: 0 auto;
-        margin-top: 50px;
-      }
-    </style>
   </head>
   <body>
-    <div class="container">
+    <div class="box m-6">
       <div class="columns">
-        <div class="column is-one-fifth">
+        <div class="column is-2">
           <aside>
-            <figure class="image is-160x160 mb-2">
+            <figure class="image">
               <img
                 src="https://res.cloudinary.com/dpoefum0k/image/upload/v1680084810/podcast-api/LogoESDH2022_se2vuk.png"
                 alt="Logo"
                 class="menu-label"
               />
             </figure>
-            <ul class="menu-list">
+            <ul class="menu-list pt-5">
               <li><a href="/createSerie">CREATE SERIE</a></li>
               <li><a href="/createShow">CREATE SHOW</a></li>
-              <li><a href="#">DELETE SHOW</a></li>
-              <li><a href="#">DELETE SERIE</a></li>
+              <li><a href="/deleteShow">DELETE SHOW</a></li>
+              <li><a href="/deleteSerie">DELETE SERIE</a></li>
               <li><a href="#">EDIT SERIE</a></li>
               <li><a href="#">EDIT SHOW</a></li>
             </ul>
@@ -141,24 +125,24 @@
           console.log(`${key}: ${value}`);
         }
 
-        // fetch('/shows', {
-        //   method: 'POST',
-        //   body: formData,
-        // })
-        //   .then((response) => {
-        //     button.classList.remove('is-loading');
-        //     if (response.status === 201) {
-        //       showAlert('success', 'Show created successfully!');
-        //     } else {
-        //       showAlert('danger', 'An error occurred while creating the show.');
-        //     }
-        //     console.log(response);
-        //   })
-        //   .catch((error) => {
-        //     button.classList.remove('is-loading');
-        //     console.error(error);
-        //     showAlert('danger', 'An error occurred while creating the show.');
-        //   });
+        fetch('/shows', {
+          method: 'POST',
+          body: formData,
+        })
+          .then((response) => {
+            button.classList.remove('is-loading');
+            if (response.status === 201) {
+              showAlert('success', 'Show created successfully!');
+            } else {
+              showAlert('danger', 'An error occurred while creating the show.');
+            }
+            console.log(response);
+          })
+          .catch((error) => {
+            button.classList.remove('is-loading');
+            console.error(error);
+            showAlert('danger', 'An error occurred while creating the show.');
+          });
         createShowForm.reset();
       });
 
