--- a/public/index.html
+++ b/public/index.html
@@ -12,22 +12,22 @@
   <body>
     <div class="box m-6">
       <div class="columns">
-        <div class="column is-one-fifth">
+        <div class="column is-2">
           <aside>
-            <figure class="image is-160x160 mb-2">
+            <figure class="image">
               <img
                 src="https://res.cloudinary.com/dpoefum0k/image/upload/v1680084810/podcast-api/LogoESDH2022_se2vuk.png"
                 alt="Logo"
                 class="menu-label"
               />
             </figure>
-            <ul class="menu-list">
+            <ul class="menu-list pt-5">
               <li><a href="/createSerie">CREATE SERIE</a></li>
               <li><a href="/createShow">CREATE SHOW</a></li>
               <li><a href="/deleteShow">DELETE SHOW</a></li>
               <li><a href="/deleteSerie">DELETE SERIE</a></li>
-              <li><a href="#">EDIT SERIE</a></li>
-              <li><a href="#">EDIT SHOW</a></li>
+              <li><a href="/editShow">EDIT SHOW</a></li>
+              <li><a href="/editSerie">EDIT SERIE</a></li>
             </ul>
           </aside>
         </div>
