--- a/public/deleteShow.html
+++ b/public/deleteShow.html
@@ -26,8 +26,8 @@
               <li><a href="/createShow">CREATE SHOW</a></li>
               <li><a href="/deleteShow">DELETE SHOW</a></li>
               <li><a href="/deleteSerie">DELETE SERIE</a></li>
-              <li><a href="#">EDIT SERIE</a></li>
-              <li><a href="#">EDIT SHOW</a></li>
+              <li><a href="/editShow">EDIT SHOW</a></li>
+              <li><a href="/editSerie">EDIT SERIE</a></li>
             </ul>
           </aside>
         </div>
