--- a/public/deleteShow.html
+++ b/public/deleteShow.html
@@ -89,6 +89,7 @@
         shows.forEach((show) => {
           const div = document.createElement('div');
           div.classList.add('column', 'box');
+          div.style.border = '2px solid' + show.dominantColor;
           div.id = show._id;
 
           const article = document.createElement('div');
