--- a/public/editShow.html
+++ b/public/editShow.html
@@ -93,6 +93,7 @@
         shows.forEach((show) => {
           const div = document.createElement('div');
           div.classList.add('column', 'box');
+          div.id = show._id;
           div.style.border = '2px solid' + show.dominantColor;
 
           const article = document.createElement('div');
