--- a/public/editSerie.html
+++ b/public/editSerie.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My Public Page</title>
+    <title>Editar Serie</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
@@ -26,12 +26,12 @@
               />
             </figure>
             <ul class="menu-list pt-5">
-              <li><a href="/createSerie">CREATE SERIE</a></li>
-              <li><a href="/createShow">CREATE SHOW</a></li>
-              <li><a href="/deleteShow">DELETE SHOW</a></li>
-              <li><a href="/deleteSerie">DELETE SERIE</a></li>
-              <li><a href="/editShow">EDIT SHOW</a></li>
-              <li><a href="/editSerie">EDIT SERIE</a></li>
+              <li><a href="/createSerie">CREAR SERIE</a></li>
+              <li><a href="/createShow">CREAR SHOW</a></li>
+              <li><a href="/deleteShow">ELIMINAR SHOW</a></li>
+              <li><a href="/deleteSerie">ELIMINAR SERIE</a></li>
+              <li><a href="/editShow">EDITAR SHOW</a></li>
+              <li><a href="/editSerie">EDITAR SERIE</a></li>
             </ul>
           </aside>
         </div>
@@ -46,13 +46,13 @@
 
         // Get the day of the week
         const daysOfWeek = [
-          'Sunday',
-          'Monday',
-          'Tuesday',
-          'Wednesday',
-          'Thursday',
-          'Friday',
-          'Saturday',
+          'Domingo',
+          'Lunes',
+          'Martes',
+          'Miercoles',
+          'Jueves',
+          'Viernes',
+          'Sabado',
         ];
         const dayOfWeek = daysOfWeek[date.getUTCDay()];
 
@@ -61,18 +61,18 @@
 
         // Get the month
         const months = [
-          'January',
-          'February',
-          'March',
-          'April',
-          'May',
-          'June',
-          'July',
-          'August',
-          'September',
-          'October',
-          'November',
-          'December',
+          'Enero',
+          'Febrero',
+          'Marzo',
+          'Abril',
+          'Mayo',
+          'Junio',
+          'Julio',
+          'Agosto',
+          'Septiembre',
+          'Octubre',
+          'Noviembre',
+          'Diciembre',
         ];
         const month = months[date.getUTCMonth()];
 
@@ -161,7 +161,7 @@
 
           const button = document.createElement('button');
           button.classList.add('button', 'is-link');
-          button.textContent = 'Edit';
+          button.textContent = 'Editar';
           button.id = `buttonId-${serie._id}`;
 
           button.addEventListener('click', () => {
@@ -233,7 +233,7 @@
         const nameLabel = document.createElement('span');
         nameLabel.classList.add('file-label');
         nameLabel.classList.add('is-size-7');
-        nameLabel.textContent = 'Drop new Cover ';
+        nameLabel.textContent = 'Elije nuvo Poster';
 
         const file2Label = document.createElement('label');
         file2Label.classList.add('file-label');
@@ -256,7 +256,7 @@
         const name2Label = document.createElement('span');
         name2Label.classList.add('file-label');
         name2Label.classList.add('is-size-7');
-        name2Label.textContent = 'Images(will delete old) ';
+        name2Label.textContent = 'Remplazar extra Imagenes';
 
         const form = document.createElement('div');
         form.classList.add('pl-5', 'has-text-centered-mobile', 'column');
@@ -315,13 +315,13 @@
           ).join(', ')}`;
         });
         const days = [
-          'Monday',
-          'Tuesday',
-          'Wednesday',
-          'Thursday',
-          'Friday',
-          'Saturday',
-          'Sunday',
+          'Lunes',
+          'Martes',
+          'Miercoles',
+          'Jueves',
+          'Viernes',
+          'Sabado',
+          'Domingo',
         ];
 
         for (let i = 0; i < days.length; i++) {
@@ -376,7 +376,11 @@
           'Luis Slimming',
           'Marcelo Valverde',
           'Hector Romero',
-          'Pao Molina',
+          'Paola Molina',
+          'Esteban Araya',
+          'Catalina Latorre',
+          'Cynthia Gallardo',
+          'Profe Castillo',
         ];
 
         const membersDiv = document.createElement('div');
@@ -446,7 +450,7 @@
 
         const update = document.createElement('button');
         update.classList.add('button', 'is-warning');
-        update.textContent = 'Update';
+        update.textContent = 'Aplicar';
         update.id = 'updateButton';
 
         update.addEventListener('click', () => {
@@ -524,7 +528,7 @@
               cancel.disabled = 'false';
               console.log(response.status);
               if (response.status == 200) {
-                showAlert('success', 'Serie Updated successfully!');
+                showAlert('success', 'Serie editada con exito!');
                 // Remove the current serie element
                 article.remove();
 
@@ -532,18 +536,24 @@
                 const button = document.getElementById(`buttonId-${serie._id}`);
                 button.style.display = '';
               } else {
-                showAlert('danger', 'Failed to edit serie ');
+                showAlert(
+                  'danger',
+                  'Error al editar la Serie intente mas tarde'
+                );
               }
             })
             .catch((error) => {
               console.log(error);
-              showAlert('danger', 'Failed to edit serie ');
+              showAlert(
+                'danger',
+                'Error al editar la Serie intente mas tarde '
+              );
             });
         });
 
         const cancel = document.createElement('button');
         cancel.classList.add('button', 'is-danger', 'ml-1');
-        cancel.textContent = 'Cancel';
+        cancel.textContent = 'Cancelar';
         cancel.id = 'updateButton';
 
         cancel.addEventListener('click', () => {
